--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -343,20 +343,32 @@
 						console.log("root: " + LocalURL + '|' + URL);
 						var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
 						console.log("getDirectory: " + LocalURL + personalUTID + "/");
-						succesCB.root.getDirectory(personalUTID, {
-							create: true,
-							exclusive: false
-						}, function(succesCB2) {
-							console.log("创建或打开子目录成功");
-							console.log("文件系统的名称:" + succesCB2.name);
-							console.log("文件系统中的目录对象:" + succesCB2.fullPath);
-							if(mui.os.ios) { //iOS系统
-								initElement(succesCB2.fullPath);
-							}
-						}, function(errorCB2) {
-							mui.toast("创建或打开子目录失败: " + JSON.stringify(errorCB2));
-							console.log("创建或打开子目录失败: " + JSON.stringify(errorCB2));
-						});
+//						succesCB.root.getDirectory(personalUTID, {
+//							create: true,
+//							exclusive: false
+//						}, function(succesCB2) {
+//							console.log("创建或打开子目录成功");
+//							console.log("文件系统的名称:" + succesCB2.name);
+//							console.log("文件系统中的目录对象:" + succesCB2.fullPath);
+//							if(mui.os.ios) { //iOS系统
+//								initElement(succesCB2.toLocalURL());								
+////								succesCB2.fileSystem.root.getDirectory('download', {
+////									create: true,
+////									exclusive: false
+////								}, function(succesCB3) {
+////									console.log("创建或打开子目录成功");
+////									console.log("文件系统的名称:" + succesCB3.name);
+////									console.log("文件系统中的目录对象:" + succesCB3.fullPath);									
+////								}, function(errorCB3) {
+////									mui.toast("创建或打开子目录失败: " + JSON.stringify(errorCB3));
+////									console.log("创建或打开子目录失败: " + JSON.stringify(errorCB3));
+////								});
+//							}
+//						}, function(errorCB2) {
+//							mui.toast("创建或打开子目录失败: " + JSON.stringify(errorCB2));
+//							console.log("创建或打开子目录失败: " + JSON.stringify(errorCB2));
+//						});
+						initElement(succesCB.root.toLocalURL());		
 					}, function(errorCB) {
 						//请求失败的的回调
 						mui.toast("请求文件系统失败: " + JSON.stringify(errorCB));
