上传作业卡到此为止

--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -64,6 +64,7 @@
 		<script src="../../js/utils/camera.js "></script>
 		<!--下载-->
 		<script src="../../js/utils/load.js "></script>
+		<script src="../../js/utils/files.js"></script>
 		<!--图片预览-->
 		<script src="../../js/mui.zoom.js "></script>
 		<!--图片预览-->
