1、发布个人动态 班级动态 发布留言 留言回复 替换换行符 2、个人空间里发布动态 返回刷新数据

--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -62,9 +62,16 @@
 				
 //								postDataPro_addClassSpace({classId},)
 				console.log('' + JSON.stringify(groupInfo));
+				var tempText = document.getElementById('input-content').value;
+				if(!tempText||tempText=='') {
+					mui.toast('请输入内容');
+					return;
+				}else{
+					tempText = tempText.replace('\n','<br />')
+				}
 				var postData = new Object();
 				postData.classId = groupInfo.classId;
-				postData.msgContent = document.getElementById('input-content').value;
+				postData.msgContent = tempText;
 				postData.encType = 0;
 				postData.encAddr = '';
 				postData.encImg = '';
