--- a/JiaoBaoYun-hb/html/quan/pub-leave.html
+++ b/JiaoBaoYun-hb/html/quan/pub-leave.html
@@ -35,14 +35,18 @@
 			var userOwnerId = plus.webview.currentWebview().data;
 			var leaveContent = document.getElementById('content');
 			events.addTap('publish', function() {
-				if(!leaveContent.value||leaveContent.value=='') {
+				var tempText= leaveContent.value;
+				if(!tempText||tempText=='') {
 					mui.toast('请输入留言');
 					return;
+				}else{
+					tempText = tempText.replace('\n','<br />')
 				}
+				console.log(tempText);
 				var httpData = {
 					userId:personalUTID,
 					userOwnerId: userOwnerId,
-					msgContent:leaveContent.value
+					msgContent:tempText
 				}
 				console.log('httpData === ' + JSON.stringify(httpData));
 				// 等待的对话框
