--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -46,7 +46,7 @@
 			})
 			events.addTap('pub-dynamic', function() {
 				var pubDynamic = document.getElementById("pub-dynamic")
-				events.jumpPage(pubDynamic,'../quan/pub-dynamic.html');
+				events.openNewWindowWithData('../quan/pub-dynamic.html', 'FromZonep');
 			})
 		})
 	</script>
